# promotor

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  vercel.json
.claude/agents/: codebase-supervisor.md
.github/workflows/: ci.yml  preview.yml
apps/landing/: vercel.json
apps/web/: .env.example  middleware.ts  vercel.json
backend/: __init__.py  config.py
backend/agents/: __init__.py  base.py  chief_coordinator.py
backend/agents/divisions/: __init__.py
backend/agents/divisions/analytics/: __init__.py  attribution_analyst.py  bundle_analyzer.py  influencer_analyst.py  margin_calculator.py  promotion_reviewer.py  sentiment_analyst.py  stockout_predictor.py  supervisor.py
backend/agents/divisions/channel_management/: __init__.py  coupang_agent.py  cross_channel_syncer.py  kakao_agent.py  naver_agent.py  oliveyoung_agent.py  supervisor.py
backend/agents/divisions/market_intelligence/: __init__.py  competitor_watcher.py  ingredient_analyst.py  news_scout.py  seasonal_analyst.py  supervisor.py
backend/agents/divisions/operations/: __init__.py  checklist_manager.py  inventory_checker.py  price_monitor.py  supervisor.py
backend/agents/divisions/strategic_planning/: __init__.py  supervisor.py  (+3 more)
backend/agents/tools/: __init__.py  common_tools.py
backend/api/: __init__.py  main.py  websocket.py
backend/api/routes/: __init__.py  agents.py  chat.py  dashboard.py  health.py
backend/graph/: __init__.py  main_graph.py  routing.py  state.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
supabase/: config.toml  seed.sql
supabase/migrations/: 20240101000000_init_extensions.sql  20240101000001_create_channels.sql  20240101000002_create_teams.sql  20240101000003_create_products.sql  20240101000004_create_promo_templates.sql  20240101000005_create_promotions.sql  20240101000006_create_promo_products.sql
tests/: conftest.py
tests/e2e/: test_api_e2e.py  test_chat_e2e.py
(+55 files in other folders)
